[package]
name = "yoin"
version = "0.0.1"
authors = ["Naomichi Agata <agatan039@gmail.com>"]
readme = "README.md"
license-file = "LICENSE"
keywords = ["japanese", "analyze", "morphological", "morpheme", "NLP"]
description = """
Yoin is a Japanese morphological analyzer written in pure Rust.
This is under development.
"""

[dependencies]
yoin-core = { git = "https://github.com/agatan/yoin-core" }
yoin-ipadic = { git = "https://github.com/agatan/yoin-ipadic"  }
clap = "2.20"
