[package]
name = "yoin-ipadic"
version = "0.0.1"
authors = ["Naomichi Agata <agatan039@gmail.com>"]
build = "build.rs"
license-file = "LICENSE"
description = "yoin-ipadic is a sub crate of yoin, Japanese morphological analyzer written in pure Rust"

[dependencies]
yoin-core = { version = "0.0.1", path = "../yoin-core" }

[build-dependencies]
bzip2 = "0.3"
tar = "0.4"
